[package]
name = "uniswapv2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bidask"

[[bin]]
name = "swap"

[dependencies]
dotenv = "0.15.0"
ethers = { version = "0.17.0", features = ["abigen", "rustls", "ws"] }
hex = "0.4.3"
hex-literal = "0.3.4"
jsonrpc-core = "18.0.0"
sha3 = "0.10.1"
tokio = { version = "1.20.1", features = ["full"] }
